# Advent-of-Code-2023-Haskell

./: AdventOfCode2023.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: AdventOfCode2023-0.1.0.0-inplace.conf  package.cache
src/: Day2a.hs
